<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlanco"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:layout_weight="8"
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/ventas_moviles_integracion" />

    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/login_texto_usuario"
        android:layout_marginTop="10dp"
        android:layout_weight="2"/>
    <TextView
        android:id="@+id/tvErrorUsuario"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textColor="@color/colorRojo"
        android:text=""
        android:layout_weight="1"/>

    <EditText
        android:id="@+id/etClave"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:hint="@string/login_texto_clave"
        android:inputType="textPassword"
        android:layout_weight="2"/>
    <TextView
        android:id="@+id/tvErrorClave"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textColor="@color/colorRojo"
        android:layout_weight="1"
        android:text=""/>

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/login_boton_entrar"
        android:textColor="@color/colorBlanco"
        android:textStyle="bold"
        android:layout_weight="2"/>

    <!--<ImageView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:id="@+id/imageView4"-->
    <!--android:layout_gravity="center_horizontal"-->
    <!--android:src="@drawable/screen"-->
    <!--android:contentDescription="@string/login_texto_imagen" />-->

    <!--<TextView-->
    <!--android:id="@+id/tvOlvidoClave"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/login_olvido_clave"-->
    <!--android:autoLink="all"-->
    <!--android:textStyle="bold"-->
    <!--android:textColor="@color/colorAccent"-->
    <!--android:textColorLink="@color/colorPrimary"-->
    <!--android:textAppearance="?android:attr/textAppearanceSmall"-->
    <!--android:gravity="center_horizontal" />-->

    <!--<Button-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/login_crear_nueva_cuenta"-->
    <!--android:id="@+id/btnCrear"-->
    <!--android:background="@color/colorPrimary"-->
    <!--android:textColor="@color/colorBlanco"-->
    <!--android:textStyle="bold"-->
    <!--android:layout_gravity="bottom"-->
    <!--android:layout_marginTop="10dp"-->
    <!--android:layout_marginBottom="10dp" />-->
</LinearLayout>